--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/logo_sin_fondo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    <meta name="theme-color" content="#8b5cf6" />
+    <meta name="description" content="Insight - Transformando datos en conocimiento para comprender mejor la mente humana" />
+    <link rel="manifest" href="/manifest.json" />
+    <title>Insight</title>
   </head>
   <body>
     <div id="root"></div>
